# pycobol

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py
src/pobol/: __init__.py  compiler.py  copybook.py  exceptions.py  program.py  source_parser.py
tests/: conftest.py  test_compiler.py  test_copybook.py  test_program.py  test_source_parser.py
