[project]
name = "pobol"
version = "0.1.2"
description = "Call COBOL programs as Python functions — file I/O handled for you"
readme = "README.md"
authors = [
    { email = "andy@andyreagan.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/andyreagan/pobol"
Repository = "https://github.com/andyreagan/pobol"
Issues = "https://github.com/andyreagan/pobol/issues"

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
